[package]
name = "rust-webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde_json = "1.0"
futures = "0.3"
influxdb = { version = "0.5.2", features = ["derive"] }
chrono = "0.4.23"